--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ select option:checked {
   padding-top: 20px;
   z-index: 2000;
   position: fixed;
-  height: 100vh;
+  height: 100%;
   left: -240px;
   width: 230px;
   overflow-y: auto;
